[project]
name = "timestamps"
description = "Little extension that provides useful commands for dealing with time and date."
authors = [
    {name = "Goldy", email = "goldy@devgoldy.xyz"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "example extension", "extension template"
]
dependencies = [
    "GoldyBot>=5.0dev11", # Tells goldy bot which version of the framework this extension is for.

    "pytz"
]
version = "1.0.0"

[project.optional-dependencies]
dev = [
    "ruff"
]

[project.urls]
GitHub = "https://github.com/Goldy-Bot/timestamps"
BugTracker = "https://github.com/Goldy-Bot/timestamps/issues"